# sudoku-kata

./: .gitignore  CMakeLists.txt
SudokuKata/: CMakeLists.txt  SudokuKata.sln  approve_program_tests.sh
SudokuKata/SudokuKata/: Program.cs  RandomNumber.cs  SudokuKata.csproj
SudokuKata/SudokuKata.Tests/: SudokuKata.Tests.csproj  UnitTest1.cs
SudokuKata/SudokuKataCLR/: AssemblyInfo.cpp  Entity.cpp  Entity.h  ManagedObject.h  SudokuCpp.cpp  SudokuCpp.h  SudokuKataCLR.cpp  SudokuKataCLR.h  SudokuKataCLR.vcxproj  SudokuKataCLR.vcxproj.filters
SudokuKata/SudokuKataCpp/: AssemblyInfo.cpp  CMakeLists.txt  CellGroup.cpp  CellGroup.h  CellGroups.cpp  CellGroups.h  Core.h  Entity.cpp  Entity.h  GroupsWithNMasks.cpp  GroupsWithNMasks.h  Program.cpp  Program.h  Puzzle.cpp  Puzzle.h  SudokuKataCpp.cpp  SudokuKataCpp.h  SudokuKataCpp.vcxproj  SudokuKataCpp.vcxproj.filters  TwoDigitMaskGroups.cpp  TwoDigitMaskGroups.h  program_main.cpp  rectangularvectors.h  stringbuilder.h  stringhelper.h
SudokuKata/SudokuKataCpp/NotYetPorted/: FileWritingRandomNumber.cpp  FileWritingRandomNumber.h  program_main.cpp
SudokuKata/SudokuKataCpp/Properties/: AssemblyInfo.h
SudokuKata/SudokuKataCpp/Utilities/: CandidatesStringifier.cpp  CandidatesStringifier.h  FileReadingRandomNumber.cpp  FileReadingRandomNumber.h  FileWritingRandomNumber.cpp  FileWritingRandomNumber.h  GridStringifier.cpp  GridStringifier.h  IRandomValueGenerator.cpp  IRandomValueGenerator.h  RandomNumber.cpp  RandomNumber.h  WStringHelpers.cpp  WStringHelpers.h
SudokuKata/SudokuKataStandardCpp/: SudokuKataStandardCpp.cpp  SudokuKataStandardCpp.vcxproj  SudokuKataStandardCpp.vcxproj.filters
SudokuKata/SudokuKataStandardCppTests/: SudokuKataStandardCppTests.cpp  SudokuKataStandardCppTests.vcxproj  SudokuKataStandardCppTests.vcxproj.filters
SudokuKata/SudokuKataTests/: ApprovalTests.Config.cs  ConsoleOutput.cs  EntityTests.cs  GridStringifierTests.cs  GridTests.cs  ProgramTests.Test1.approved.txt  (+9 more)
SudokuKata/SudokuKataTestsCpp/: ApprovalTests.Config.cpp  ApprovalTests.Config.h  CMakeLists.txt  GridStringifierTests.cpp  GridStringifierTests.h  ProgramTests.cpp  ProgramTests.h  WStringHelpersTests.cpp  disposable_interface.h  tangible_filesystem.h
SudokuKata/SudokuKataTestsCpp/TestHelpers/: ApprovalsHelpers.cpp  ApprovalsHelpers.h  ConsoleOutput.cpp  ConsoleOutput.h  FirstNFailuresReporter.h  WStringHelpers.h
SudokuKata/SudokuKataTestsCpp/approval_tests/: GridStringifierTests.TestPopulatedBoardAsCode.approved.txt  ProgramTests.TestSeed.0000.approved.txt  ProgramTests.TestSeed.0000.seeds.txt  ProgramTests.TestSeed.0001.approved.txt  ProgramTests.TestSeed.0002.approved.txt  ProgramTests.TestSeed.0002.seeds.txt  ProgramTests.TestSeed.0003.approved.txt  ProgramTests.TestSeed.0004.approved.txt  ProgramTests.TestSeed.0005.approved.txt  ProgramTests.TestSeed.0005.seeds.txt  ProgramTests.TestSeed.0006.approved.txt  ProgramTests.TestSeed.0007.approved.txt  ProgramTests.TestSeed.0007.seeds.txt  ProgramTests.TestSeed.0008.approved.txt  ProgramTests.TestSeed.0008.seeds.txt  ProgramTests.TestSeed.0009.approved.txt  ProgramTests.TestSeed.0010.approved.txt  ProgramTests.TestSeed.0011.approved.txt  ProgramTests.TestSeed.0011.seeds.txt  ProgramTests.TestSeed.0012.approved.txt  ProgramTests.TestSeed.0013.approved.txt  ProgramTests.TestSeed.0014.approved.txt  ProgramTests.TestSeed.0015.approved.txt  ProgramTests.TestSeed.0015.seeds.txt  ProgramTests.TestSeed.0016.approved.txt  ProgramTests.TestSeed.0017.approved.txt  ProgramTests.TestSeed.0017.seeds.txt  ProgramTests.TestSeed.0018.approved.txt  ProgramTests.TestSeed.0018.seeds.txt  ProgramTests.TestSeed.0019.approved.txt  ProgramTests.TestSeed.0019.seeds.txt
(+54 files in other folders)
